feat(pages): :sparkles: 新增Login.vue与Home.vue

--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     }
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.4.2",
     "@types/node": "^24.3.0",
-    "vue": "^3.5.18"
+    "pinia": "^3.0.3",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@arco-design/web-vue": "^2.57.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "cz-git": "^1.12.0",
